00-master-node/10-cafe-api-app/lab-1/00-lab-1-cafe-namespace.yaml
# Cafe App Namespace Yaml

apiVersion: v1
kind: Namespace
metadata:
  name: cafe

---
