00-master-node/10-cafe-api-app/lab-1/03-lab-1-cafe-ingress-namespace-nodeport-path-route.yaml
#Cafe App Coffe & Tea Service – NGIX Ingress Resource - NodePort Service  YAML as Path-based Routing) “03-lab-1-cafe-ingress-namespace-nodeport-path-route.yaml”

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: cafe
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cafe.mashlab.com
    secretName: cafe-secret-kubectl
  rules:
  - host: cafe.mashlab.com
    http:
      paths:
      - path: /coffee
        pathType: Prefix
        backend:
          service:
            name: coffee-svc
            port:
              number: 80
      - path: /tea
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
              number: 80

---
